--- a/guides/alberta/package.html
+++ b/guides/alberta/package.html
@@ -75,7 +75,7 @@
 <h2>Complete tax package</h2>
 
 <p>Each package includes the guide, the return, related schedules, and the provincial or territorial schedules, information, and forms (except Quebec).</p>
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">Income Tax Package - 2023</a></p>
 </div>
@@ -169,7 +169,7 @@
 </details>
 </div></div>
 <h2>Federal information only</h2>
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g.html">Federal income tax and benefit information - 2023</a></p>
 </div>
@@ -265,7 +265,7 @@
 </div>
 </div>
 <h2>Provincial or territorial information only</h2>
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 
 <p><a href="onepager-new2.html"><img src="flag-ab.jpg" class="mrgn-rght-md">Alberta tax information - 2023</a></p>
@@ -361,7 +361,7 @@
 
 </div>
 </div>
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-bc.jpg" class="mrgn-rght-md">British Columbia tax information - 2023</a></p>
 </div>
@@ -384,7 +384,7 @@
 
 
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-mn.jpg" class="mrgn-rght-md">Manitoba tax information - 2023</a></p>
 </div>
@@ -405,7 +405,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nb.jpg" class="mrgn-rght-md">New Brunswick tax information - 2023</a></p>
 </div>
@@ -426,7 +426,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nl.jpg" class="mrgn-rght-md">Newfoundland and Labrador tax information - 2023</a></p>
 </div>
@@ -447,7 +447,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nt.jpg" class="mrgn-rght-md">Northwest Territories tax information - 2023</a></p>
 </div>
@@ -468,7 +468,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-ns.jpg" class="mrgn-rght-md">Nova Scotia tax information - 2023</a></p>
 </div>
@@ -489,7 +489,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nu.jpg" class="mrgn-rght-md">Nunavut tax information - 2023</a></p>
 </div>
@@ -510,7 +510,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-on.jpg" class="mrgn-rght-md">Ontario tax information - 2023</a></p>
 </div>
@@ -531,7 +531,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-pe.jpg" class="mrgn-rght-md">Prince Edward Island tax information - 2023</a></p>
 </div>
@@ -552,7 +552,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-qc.jpg" class="mrgn-rght-md">Quebec tax information from CRA - 2023</a></p>
 </div>
@@ -573,7 +573,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-qc.jpg" class="mrgn-rght-md">Quebec tax information from Revenu Québec - 2023</a></p>
 </div>
@@ -593,7 +593,7 @@
 </details>
 </div>
 </div>
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-sk.jpg" class="mrgn-rght-md">Saskatchewan tax information - 2023</a></p>
 </div>
@@ -614,7 +614,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mrgn-bttm-md">
 <div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-yt.jpg" class="mrgn-rght-md">Yukon tax information - 2023</a></p>
 </div>
