fixed quebec link

--- a/guides/alberta/package.html
+++ b/guides/alberta/package.html
@@ -558,7 +558,7 @@
 </div>
 <div class="col-md-6">
 <details>
-<summary>Previous years: Quebec</summary>
+<summary>Previous years: Quebec (from CRA)</summary>
 <ul>
 <li><a href="#">(link here)</a></li>
 <li><a href="#">(link here)</a></li>
@@ -579,7 +579,7 @@
 </div>
 <div class="col-md-6">
 <details>
-<summary>Previous years: Quebec</summary>
+<summary>Previous years: Quebec (from Revenu Québec)</summary>
 <ul>
 <li><a href="#">(link here)</a></li>
 <li><a href="#">(link here)</a></li>
