--- a/guides/alberta/package.html
+++ b/guides/alberta/package.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Personal income tax packages - Canada.ca</title>
+         <title>All personal income tax packages - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <!-- Meta data -->
          <!-- Meta data-->
@@ -65,7 +65,7 @@
             <div class="container">
 			
                
-	<h1 class="gc-thickline mrgn-tp-0">Personal income tax packages</h1>
+	<h1 class="gc-thickline mrgn-tp-0">All personal income tax packages</h1>
                    
 
 [Introductory paragraph to help with SEO]
