--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1138,17 +1138,29 @@ Indian Act</h3>
 
  <details><summary>Income partly-exempt</summary> 
 <div id="ajax-t4-how-part-emp">
-	<p>Withhold the following deductions and report on a T4 slip the payment you made to your employee: </p>
-        <ul class="fa-ul">
-                       <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income, on the portion of the taxable income</li>
-                        <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings, on the portion of the taxable income</li>
-             
-                         <li><span class="fas fa-check fa-li text-success"></span>Box 26 - CPP/QPP pensionable earnings, on the portion of the taxable income</li>
-                        
-		<li><span class="fas fa-check fa-li text-success"></span>Code 40 - Other Information, on the portion of the taxable income </li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 66 – Eligible retiring allowances</li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 69 – Indian (exempt income) – Non-eligible retiring allowances</li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 71 – Indian (tax-exempt income) – Employment</li>
+	
+<p>Withhold the following deductions and report on a T4 slip the payment you made to your employee: </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Income tax, on the <strong>portion of the income which is taxable</strong></li> 	 
+ <li><span class="fas fa-check fa-li text-success"></span> EI, on the <strong>portion of the income which is taxable</strong></li>
+ <li><span class="fas fa-check fa-li text-success"></span> CPP, on the <strong>portion of the income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
+ 
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span>Box 14 on the portion of the taxable income</li>
+   <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 on EI insurable earnings on the portion of the taxable income</li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 on CPP/QPP pensional earning on the <strong>portion of the income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
+
+<li><span class="fas fa-check fa-li text-success"></span>Codes on taxable benefits (for example, code 40) on the portion of the taxable income </li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 66 on eligible retiring allowances on taxable income you paid</li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 69 on tax-exempt non-eligible retiring allowances you paid</li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 71 on tax-exempt employment income you paid </li>
+</ul></li>
+</ul>
+
 		
                      </ul>
 	 </div>
