--- a/guides/alberta/package.html
+++ b/guides/alberta/package.html
@@ -634,7 +634,27 @@
 </details>
 </div>
 </div>
-
+<h2>Non-resident information only</h2>
+<div class="row mrgn-bttm-md">
+<div class="col-md-6">
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html">Non-resident tax information - 2023</a></p>
+</div>
+<div class="col-md-6">
+<details>
+<summary>Previous years: Non-resident</summary>
+<ul>
+<li><a href="#">(link here)</a></li>
+<li><a href="#">(link here)</a></li>
+<li><a href="#">(link here)</a></li>
+<li><a href="#">(link here)</a></li>
+<li><a href="#">(link here)</a></li>
+<li><a href="#">(link here)</a></li>
+<li><a href="#">(link here)</a></li>
+<li><a href="#">(link here)</a></li>
+</ul>
+</details>
+</div>
+</div>
 
            <div id="def-preFooter"> </div>
             <!-- Write closure template --> 
