--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1121,14 +1121,14 @@ Indian Act</h3>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(do not withhold)</small></li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(do not withhold)</small></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(do not withhold if you did not file Form CPT124)</small></li>  
- <li><span class="fas fa-check fa-li text-success"></span> CPP on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></li>
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(tax-exempt income)</small></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(if you did not file Form CPT124)</small></li>  
+ <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 if you filed Form CPT124</li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(if you filed Form CPT124)</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 on tax-exempt non-eligible retiring allowances you paid</li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 71 on tax-exempt employment income you paid </li>
 </ul></li>
@@ -1143,21 +1143,20 @@ Indian Act</h3>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Income tax, on the <strong>portion of the income which is taxable</strong></li> 	 
- <li><span class="fas fa-check fa-li text-success"></span> EI, on the <strong>portion of the income which is taxable</strong></li>
- <li><span class="fas fa-check fa-li text-success"></span> CPP, on the <strong>portion of the income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
- 
-</ul></li>
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(taxable income only)</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(taxable income only)</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(taxable income only or on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>  
+ </ul></li>
+
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span>Box 14 on the portion of the taxable income</li>
-   <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 on EI insurable earnings on the portion of the taxable income</li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 on CPP/QPP pensional earning on the <strong>portion of the income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
-
-<li><span class="fas fa-check fa-li text-success"></span>Codes on taxable benefits (for example, code 40) on the portion of the taxable income </li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 66 on eligible retiring allowances on taxable income you paid</li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 69 on tax-exempt non-eligible retiring allowances you paid</li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 71 on tax-exempt employment income you paid </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small class="text-muted">(taxable employment income only)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(taxable income only or on all income if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(taxable income only)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 67 if you paid non-eligible retiring allowances <small class="text-muted">(taxable income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 69 if you paid non-eligible retiring allowances <small class="text-muted">(tax-exempt)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 71 <small class="text-muted">(tax-exempt employment income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(taxable income only)</small> </li>
 </ul></li>
 </ul>
 
