--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1168,13 +1168,21 @@ Indian Act</h3>
 <h4>Payment made to a self-employed worker - T4 slip</h4>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
-	<p>Report on a T4 slip the self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed fisher , a self-employed barber or hairdresser , or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
-        <ul class="fa-ul">
-                      <li><span class="fas fa-check fa-li text-success"></span>Code 88 – Indian (exempt income) – Self-employment</li>
 
-
-                     </ul>
-	   </div>
+	<p>Withhold the following deductions and report on a T4A slip the payment you made to a self-employed worker: </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(tax-exempt income)</small></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(tax-exempt income)</small></li>  
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
+</ul></li>
+</ul>
+	 </div>
   </details>
 
  <details><summary>Income partly-exempt</summary> 
