--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1123,7 +1123,7 @@ Indian Act</h3>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
  <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(tax-exempt income)</small></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(if you did not file Form CPT124)</small></li>  
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(tax-exempt income and if you did not file Form CPT124)</small></li>  
  <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
@@ -1165,11 +1165,11 @@ Indian Act</h3>
 	 </div>
   </details>
 
-<h4>Payment made to a self-employed worker - T4 slip</h4>
+<h4>Payment made to a self-employed worker who is a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles - T4 slip</h4>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
 
-	<p>Withhold the following deductions and report on a T4A slip the payment you made to a self-employed worker: </p>
+	<p>Withhold the following deductions and report on a T4A slip the payment you made to a self-employed worker who is a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
