--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1122,13 +1122,13 @@ Indian Act</h3>
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(tax-exempt income)</small></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(tax-exempt income and if you did not file Form CPT124)</small></li>  
- <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(all income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong>)</small></li>
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(only if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 on tax-exempt non-eligible retiring allowances you paid</li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 71 on tax-exempt employment income you paid </li>
 </ul></li>
@@ -1143,20 +1143,20 @@ Indian Act</h3>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(taxable income only)</small></li> 	
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(taxable income only)</small></li> 	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(taxable income only or on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>  
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income or on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>  
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small class="text-muted">(taxable employment income only)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(taxable income only or on all income if you filed Form CPT124)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(taxable income only)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 67 if you paid non-eligible retiring allowances <small class="text-muted">(taxable income)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 69 if you paid non-eligible retiring allowances <small class="text-muted">(tax-exempt)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 71 <small class="text-muted">(tax-exempt employment income)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(taxable income only)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income or on all income if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 67 if you paid non-eligible retiring allowances <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 69 if you paid non-eligible retiring allowances <small class="text-muted">(<strong>only</strong> on tax-exempt income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 71 <small class="text-muted">(<strong>only</strong> on tax-exempt income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(<strong>only</strong> on taxable income)</small> </li>
 </ul></li>
 </ul>
 
@@ -1187,19 +1187,27 @@ Indian Act</h3>
 
  <details><summary>Income partly-exempt</summary> 
    <div id="ajax-t4-how-self-part">
-	<p>Report on a T4 slip the self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed fisher , a self-employed barber or hairdresser , or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
-        <ul class="fa-ul">
-                       <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income, on the portion of the taxable income</li>
-                        <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings, on the portion of the taxable income</li>
-                         <li><span class="fas fa-check fa-li text-success"></span>Box 26 - CPP/QPP pensionable earnings, on the portion of the taxable income</li>
-                <li><span class="fas fa-check fa-li text-success"></span>Code 40 - Other Information, on the portion of the taxable income </li>
-		<li><span class="fas fa-check fa-li text-success"></span>Code 78 – Fishers – Gross income, code 79 – Fishers – Net partnership amount and code 80 – Fishers – Shareperson amount for a fisher, on the portion of the taxable income</li>
-		<li><span class="fas fa-check fa-li text-success"></span>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income, on the portion of the taxable income</li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 83 – Barbers or hairdressers – Gross income, on the portion of the taxable income</li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 88 – Indian (exempt income) – Self-employment</li>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income or on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>  
+ </ul></li>
 
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small class="text-muted">(appropriate code)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed fishers</strong>)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 82 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong>)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 83 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed barbers and hairdressers</strong>)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(<strong>only</strong> on the tax-exempt income of the self-employed worker)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">(taxable income only)</small> </li>
+</ul></li>
+</ul>
 
-                     </ul>
 	   </div>
   </details>
 
