--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1114,10 +1114,10 @@ Indian Act</h3>
 </li>
 <li><h3 id="h_6">Testing to combine - Withhold and report the payment on a slip</h3>
 <p class="mrgn-bttm-lg">You must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
-<h4>Payment made to your employee - T4 slip</h4>
+<h4>Payment made to your employee</h4>
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4-how-ex-emp">
-	<p>Withhold the following deductions and report on a T4 slip the payment you made to your employee: </p>
+	<p>Withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1139,7 +1139,7 @@ Indian Act</h3>
  <details><summary>Income partly-exempt</summary> 
 <div id="ajax-t4-how-part-emp">
 	
-<p>Withhold the following deductions and report on a T4 slip the payment you made to your employee: </p>
+<p>Withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1165,11 +1165,11 @@ Indian Act</h3>
 	 </div>
   </details>
 
-<h4>Payment made to a a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles - T4 slip</h4>
+<h4>Payment made to a a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
 
-	<p>Withhold the following deductions and report on a T4 slip the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
+	<p>Withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1187,7 +1187,7 @@ Indian Act</h3>
 
  <details><summary>Income partly-exempt</summary> 
    <div id="ajax-t4-how-self-part">
-<p>Withhold the following deductions and report on a T4 slip the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
+<p>Withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1211,14 +1211,14 @@ Indian Act</h3>
 	   </div>
   </details>
 
-<h4>Payment made to a person or partnership that was a shareholder - T4A slip</h4>
+<h4>Payment made to a person or partnership that was a shareholder</h4>
 <div id="ajax-t4a-report">
 <div id="ajax-t4a-explain">
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
  </div>
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4a-how-ex">
-<p>Withhold the following deductions and report on a T4A slip the payment you made to a person or partnership that was a shareholder: </p>
+<p>Withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a person or partnership that was a shareholder: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -1238,7 +1238,7 @@ Indian Act</h3>
   </details>
  <details><summary>Income partly-exempt</summary> 
 <div id="ajax-t4a-how-part">
-<p>Withhold the following deductions and report on a T4A slip the payment you made to a person or partnership that was a shareholder: </p>
+<p>Withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a person or partnership that was a shareholder: </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
