--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -500,16 +500,8 @@ Indian Act</h3>
                 Non-employment income for example, pension income, retiring allowances, RRSP and CPP/QPP</h3>
  <div data-ajax-replace="#ajax-t4a-explain"></div>
 <hr>
-  <h4>Withholding obligations </h4>
-        <div data-ajax-replace="#ajax-t4a-withhold"></div>
- <br>  
-<h4>Reporting obligations - T4A slip </h4>
+ <h3 class="mrgn-tp-md">Withholding and reporting obligations</h3>
  <div data-ajax-replace="#ajax-t4a-report"></div>
-  
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
-<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
-</ul>
  
             </div>
 
@@ -1061,9 +1053,7 @@ Indian Act</h3>
  <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
 </ul></li>
 </ul>
-<div id="ajax-t4a-explain">
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
- </div>
  </div>
   </details>
  <details><summary>Income partly-exempt</summary> 
