--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -755,8 +755,8 @@ Indian Act</h3>
 
 			<li><span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span><span class="mrgn-tp-0 text-muted h5">Total working days on a reserve (do not include vacation or sick leave)  </span> 
+                                       <span class="fas fa-hashtag fa-stack-1x"></span>
+                                       </span><span class="mrgn-tp-0 text-muted h5">Total working days on a reserve (do not include vacation days, sick days and statutory holidays)  </span> 
                                     </li>
 			 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
@@ -783,7 +783,7 @@ Indian Act</h3>
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-percent fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the % of duties of employment performed on reserve (paid leave such as vacation or sick leave is also exempt)
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the % of duties of employment performed on reserve (paid leave such as vacation days, sick days and statutory holidays leave is also exempt)
                                     </span></span> </li>
 					
                   </ul>
@@ -796,7 +796,7 @@ Indian Act</h3>
 			<li><span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-hashtag fa-stack-1x"></span>
-                                       </span><span class="mrgn-tp-0 text-muted h5">44 total Working days on a reserve (not including vacation or sick leave)  </span> 
+                                       </span><span class="mrgn-tp-0 text-muted h5">44 total working days on a reserve (not including vacation days, sick days and statutory holidays)  </span> 
                                     </li>
 			 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
@@ -823,7 +823,7 @@ Indian Act</h3>
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-percent fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> 20% is the percentage of duties of employment performed on reserve (paid leave such as vacation or sick leave is also exempt)
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> 20% is the percentage of duties of employment performed on reserve (paid leave such as vacation days, sick days and statutory holidays is also exempt)
                                     </span></span> </li>
 					
                   </ul>
