--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -231,7 +231,7 @@
                         </tr>
 	   
                         <tr>
-                           <td><a href="retiring-allowances.html">Payments of retiring allowances</a> </td>
+                           <td><a href="retire-allowance.html">Payments of retiring allowances</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
 			
