--- a/newcomers/newcomers.html
+++ b/newcomers/newcomers.html
@@ -11,7 +11,7 @@
 		<!-- Load closure template scripts -->
 		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
 		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
-
+<link href="https://cra-arc.gc.ca/wet-boew/css/custom/and-or.css" rel="stylesheet">
 		<!-- Write closure template -->
 		<script type="text/javascript">
 			document.write(wet.builder.refTop({
