--- a/newcomers/newcomers.html
+++ b/newcomers/newcomers.html
@@ -245,7 +245,7 @@ GST/HST credit – Eligibility</h1>
 	<li><span class="fas fa-check text-success fa-li"></span>A Canadian resident for income tax purposes during:   </li>
 	
 	</ul>
-		<div class="cnjnctn-type-or cnjnctn-xs">
+		<div class="cnjnctn-type-and cnjnctn-xs">
 		<div class="cnjnctn-col">
 			
 			<p>The month <strong>before</strong> the CRA makes a payment</p>
@@ -281,16 +281,7 @@ GST/HST credit – Eligibility</h1>
 <p>Leaving an abusive or violent situation? Get benefit and credit payments without putting yourself, or your family, in danger. For more information, go to <a href="/en/revenue-agency/services/child-family-benefits/benefits-credits-abusive-violent-situation.html">Getting benefits and credits when in an abusive or violent situation</a>.</p>
 		
 		
-			<div class="cnjnctn-type-or cnjnctn-xs">
-		<div class="cnjnctn-col">
-			<h2 class="mrgn-tp-sm text-muted h5">Climate action incentive credit</h2>
-			<p>Prior to 2021, the CAI was a refundable tax credit claimed annually on personal income tax returns.</p>
-		</div>
-		<div class="cnjnctn-col">
-			<h2 class="mrgn-tp-sm text-muted h5">Climate action incentive payment (CAIP)</h2>
-			<p>The CAIP will now be paid as a quarterly benefit. If you are entitled, you will automatically receive your CAIP four times a year, starting in July 2022.</p>
-		</div>
-	</div>
+		
 		
 		
 <h2>Related information</h2>
