--- a/newcomers/newcomers.html
+++ b/newcomers/newcomers.html
@@ -4,14 +4,14 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Common tax terms - Learn about your taxes - Canada.ca</title>
+	<title>GST/HST credit – Eligibility</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
 		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
-<link href="https://cra-arc.gc.ca/wet-boew/css/custom/and-or.css" rel="stylesheet">
+
 		<!-- Write closure template -->
 		<script type="text/javascript">
 			document.write(wet.builder.refTop({
@@ -465,7 +465,8 @@ GST/HST credit – Eligibility</h1>
 
 
 
-
+<div id="def-preFooter">
+</div>
 <!-- Write closure template -->
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
