--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -983,8 +983,8 @@ input[type='radio'] {
 				<li><a href="when-file.html">When to file the return and pay the tax</a><br>
                                 Due date, exception for 2022
                             </li>
-                            <li><a href="complete-return.html">Complete the return and calculate the tax</a><br>
-                               How to fill out the return and calculate the tax 
+                            <li><a href="complete-return.html">How to complete the return and calculate the tax</a><br>
+                               Filling out the return, keeping records
                             </li>
 				
                             <li><a href="file-return.html">File the return</a><br>
