transfer local copy

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -750,7 +750,7 @@ html:lang(fr) .cnjnctn-or:before {
       <ul class="gc-navseq">
         <li class="active"><a aria-current="page">Who must file a return and pay the tax</a></li>
         <li><a href="when-file.html">When to file the return and pay the tax</a></li>
-        <li><a href="complete-return.html">Complete the return</a></li>
+        <li><a href="complete-return.html">Complete the return and calculate the tax</a></li>
         <li><a href="file-return.html">File the return</a></li>
         <li><a href="pay-tax.html">Pay the tax</a></li>
         <li><a href="contact.html">Contact us</a></li>
@@ -798,14 +798,29 @@ html:lang(fr) .cnjnctn-or:before {
       </ul>
       <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">Owner of residential property</a></p>
     </details>
-    <br>
-    <p>If you are an <strong>affected owner</strong>, you must also pay the tax for each residential property you own, unless you qualify for an exemption.</p>
-    <p>To claim an exemption, you must select the exemption on your return. If your ownership qualifies for an exemption, you will not have to pay the tax.</p>
-    <p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
-	  <p>If you are one of several affected owners of a residential property, <strong>each of you</strong> must file a separate return for the property.</p>
-    <p>You <strong>must still file</strong> an annual return even if your ownership of the residential property qualifies for an exemption and you do not owe any tax.</p>  
-		  <p>If you are not an affected owner, you are an <strong>excluded owner</strong>. Excluded owners do not have to file a return or pay the tax. </p>
-    <h2 id="determine">Determine if you are an affected owner or an excluded owner</h2>
+    
+<h3>Affected owner</h3>
+<p>As an affected owner, you <strong>must file</strong> an annual return.</p>
+<p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
+<p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
+<details>
+<summary>Exemptions from paying the tax</summary>
+
+<p>You may qualify for an exemption from paying the tax. To claim it, you must select the exemption on your return.</p>
+<p>If your ownership qualifies for an exemption, you <strong>do not</strong> have to pay the tax.</p>
+<p>If your ownership <strong>does not qualify</strong> for an exemption, you <strong>must</strong> pay the tax.</p>
+<p>Read more: <a href="#h_1_3">Exemption eligibility for affected owners</a>
+
+<h3>Excluded owner</h3>
+<p>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
+<ul>
+<li>File a return</li>
+<li>Pay the tax</li>
+</ul>
+    
+
+
+ <h2 id="determine">Determine if you are an affected owner or an excluded owner</h2>
     <p>Find out which type of owner you are based on your situation, and if you may qualify for an exemption from paying the tax.</p>
     <div class="wb-tabs mrgn-tp-lg">
       <div class="tabpanels">
