--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -809,8 +809,8 @@ html:lang(fr) .cnjnctn-or:before {
 <p>You may qualify for an exemption from paying the tax. To claim it, you must select the exemption on your return.</p>
 <p>If your ownership qualifies for an exemption, you <strong>do not</strong> have to pay the tax.</p>
 <p>If your ownership <strong>does not qualify</strong> for an exemption, you <strong>must</strong> pay the tax.</p>
-<p>Read more: <a href="#h_1_3">Exemption eligibility for affected owners</a>
-
+<p>Read more: <a href="#h_1_3">Exemption eligibility for affected owners</a></p>
+</details>
 <h3>Excluded owner</h3>
 <p>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
 <ul>
