--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -983,7 +983,7 @@ input[type='radio'] {
 				<li><a href="when-file.html">When to file the return and pay the tax</a><br>
                                 Due date, exception for 2022
                             </li>
-                            <li><mark><a href="complete-return.html">How to complete the return and calculate the tax</a></mark>mark><br>
+                            <li><mark><a href="complete-return.html">How to complete the return and calculate the tax</a></mark><br>
                               <mark> Filling out the return, keeping records</mark>
                             </li>
 				
