--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -259,10 +259,10 @@
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
 
-<p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether the income is taxable or exempt.</p>
+<p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
 
 <p><span class="fa fa-balance-scale fa-lg text-muted"></span> Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration.</p>
-
+<p>The term First Nations worker on this page refers only to an worker who is registered or entitled to be registered under the Indian Act.</p>
 
 
 
@@ -296,6 +296,9 @@
                       <div class="wb-fieldflow-header">
                         <div class="brdr-tp">
                           <p class="gc-font-2019 mrgn-tp-md">Where the worker is registered under the Indian Act, you need to consider the type of income.</p>
+
+<p> <a href="#ajax-worker-status" aria-controls="ajax-worker-status" class="overlay-lnk" role="button">What if you don’t know if a worker is an employee or self-employed <span class="far fa-question-circle"></span></a> </p>
+
                         </div>
                 <p class="wb-fieldflow-label">What is the type of income? </p>
  </div>
@@ -664,8 +667,41 @@ Indian Act</h3>
 
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
+ <li>             
+<h3 id="step1">	Determine the nature of the payment made to the worker</h3>
+<p>You need to determine if the income paid is one of the following:</p>
+<ul>
+<li>Employment income or employment-related income</li>
+<li>Self-employment income to a person who is a fisher, a barber or hairdresser, or a taxi driver and driver of other passenger-carrying vehicles</li>
+<li>Other self-employment income or business income</li>
+<li>Payment made to a recipient (for example: education allowances, scholarships or training allowances)</li>
+</ul>
+
+<details><summary><span class="fas fa-comments fa-lg"></span> What if you do not know if a worker is an employee or is self-employed </summary>
+<div id="worker-status">
+<p>If you or an individual  working for you is not sure of the worker's employment status (employee or self-employed), either one of you can request a CPP/EI ruling to determine the status and whether the employment or the earnings are   pensionable, insurable or both.</p>
+<p>Learn more:</p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-11.html">How to get a CPP/EI ruling</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Guide RC4110 - Employee or Self-employed?</a> </li> 
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI Explained</a></li>
+</ul>
+</div>
+</details>
+<hr>
+
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the income is <strong>other self-employment income or business income</strong>, <strong>do not</strong> continue to next step.</p> 
+<p>Add a paragraph to say that this page does not cover this content and redirect appropriately. </p> 
+</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>employment income</strong> or a <strong>employment-related income</strong>, continue to <a href="#step2">Step 2 - Determine if the employee is a First Nations employee </a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>self-employment income to a person who is a fisher, a barber or hairdresser, or a taxi driver and driver of other passenger-carrying vehicles</strong>, continue to <a href="#step3">Step ? - ???  </a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the <strong>payment is made to a recipient</strong>, continue to <a href="#step4">Step ? - ???  </a>.</li>
+</ul>
+ </li>
+
   <li>             
-<h3 id="h_1">Determine if the worker is registered with Indigenous Services Canada (ISC) </h3>
+<h3 id="step2">Determine if the employee is a First Nations employee </h3>
 <div id="ajax-reg">
 <p>You must determine if the worker is registered with ISC and their effective date for registration. </p>
 
@@ -1168,6 +1204,12 @@ Indian Act</h3>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-reg"></div>
 	</div></section>
+
+<section id="worker-status" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">What if you do not know if a worker is an employee or is self-employed</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-worker-status"></div>
+	</div></section>
+
 
 <section id="how-prorate" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to determine the percentage of duties related to employment on a reserve</h2>
 	</header>	<div class="modal-body">		
