--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -709,7 +709,7 @@ Indian Act</h3>
 
 <p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
 
-<p>Learn more:</p>
+<p>Learn more about registration under the Indian Act and the Indian Register:</p>
  <ul>
 <li>How to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </li>
 <li>Effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></li>
